k8s/server-deployment.yaml
# Deployment for server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server   # this is the label for the pod
  template:               # this configures the pod
    metadata:
      labels:
        component: server # this is the label for the pod
    spec:
      containers:
        - name: server # this is the name of the container
          image: stephengrider/multi-server # this is the image we want to use
          ports:
            - containerPort: 5000 # this is the port we want to expose
          resources:
            limits:
              memory: "256Mi" # 256 MB
              cpu: "500m" # 500 millicpu (.5 cpu)
